canary/src/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: canary-nodejs-microservice
  name: worker-v1
spec:
  selector:
    app: worker-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: canary-nodejs-microservice
  name: worker-v2
spec:
  selector:
    app: worker-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
 namespace: canary-nodejs-microservice
 name: front-end
spec:
 selector:
   app: front-end
 ports:
   - protocol: TCP
     port: 80
     targetPort: 80
