canary/src/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: canary-nodejs-microservice
  name: worker-v1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: worker.k8s.homelab.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: worker-v1
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: canary-nodejs-microservice
  name: worker-v2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "User-Id"
    nginx.ingress.kubernetes.io/canary-by-header-value: "vipUser1"
spec:
  rules:
    - host: worker.k8s.homelab.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: worker-v2
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: canary-nodejs-microservice
  name: front-end
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: front-end.k8s.homelab.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: front-end
                port:
                  number: 80
